--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build:
-    name: Publish ${{ matrix.job.version }}
+    name: Build ${{ matrix.job.version }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -63,15 +63,6 @@ jobs:
         with:
           path: dist/*.*
 
-  # Note: Validate that all build jobs completed successfully
-  # If a Runner fails on the setup, it can leave a job marked as "skipped"
-  # and this does not cause the entire job to fail, instead it silently continues
-  # leading to downstream problems (e.g. only publishing half of the artifacts!)
-  #
-  # see https://stackoverflow.com/a/67532120/4907315
-  # Fail if any `needs` job was not a success.
-  # Along with `if: always()`, this allows this job to act as a single required status check for the entire build job
-  #
   check-build:
     runs-on: ubuntu-latest
     needs: [build]
